# pnar-world-backend-rust

./: .dockerignore  .env  .env.example  .env.production.template  .gitignore  Cargo.toml  DEV-README.md  Dockerfile  PNAR-API.postman_collection.json  PNAR-API.postman_environment.json  PRODUCTION_IMPROVEMENTS.md  README.md  configuration-prod.yaml  configuration.production.yaml  configuration.yaml  demo-postman.sh  deploy.sh  known_hosts  pod.yaml  remote-deploy.sh  reset-db.sh  rustfmt.toml  setup-linux.sh  setup-macos.sh  sqlx-data.json  start.sh  stop-dev.sh  stop.sh  test-startup.sh
.github/workflows/: ci-cd.yml  ssh-connect-test.yml
configuration/: base.yaml  development.yaml  production.yaml
deploy/: nginx.pnar.example  pnar.env.example  pnar.service.example
migrations/: 20240412194055_db_init.sql  20240412194055_db_init.sql.sql
postman/: PNAR-API.postman_collection.json  PNAR-API.postman_environment.json  Postman-README.md  README.md  demo-postman.sh
scripts/: dev.sh
src/: config.rs  database.rs  error.rs  lib.rs  logging.rs  main.rs  openapi.rs  startup.rs  state.rs
src/constants/: alphabet.rs  defaults.rs  error_messages.rs  mod.rs  pagination.rs  roles.rs
src/domain/: dictionary.rs  mod.rs  user.rs
src/dto/: alphabet.rs  analytics.rs  auth.rs  book.rs  contribution.rs  dictionary.rs  mod.rs  notes.rs  notification.rs  responses.rs  translation.rs  user.rs
src/handlers/: alphabet.rs  analytics.rs  auth.rs  book.rs  contribution.rs  dictionary.rs  health.rs  mod.rs  notification.rs  roles.rs  translation.rs  user.rs
src/middleware/: auth.rs  hierarchy.rs  mod.rs  security.rs
src/model/: mod.rs  request.rs  response.rs
src/model/request/: dictionary.rs
src/models/: mod.rs
src/route/: actuator.rs  alphabet.rs  analytics.rs  auth.rs  book.rs  contribution.rs  dictionary.rs  mod.rs  roles.rs  translation.rs
src/service/: authentication.rs  dictionary.rs  mod.rs  registration.rs
src/services/: alphabet_service.rs  analytics_service.rs  auth_service.rs  book_service.rs  contribution_service.rs  dictionary_service.rs  mod.rs  notification_service.rs  translation_service.rs  user_service.rs  user_service.rs.new
src/utils/: analytics_tracker.rs  authorization.rs  database.rs  jwt.rs  mod.rs
