[package]
name = "pnar-world-api"
version = "0.1.0"
edition = "2021"
authors = ["Stavros Grigoriou <unix121@protonmail.com>"]
description = "Pnar World Dictionary API - A modern web service for Pnar language translation"
license = "MIT"
repository = "https://github.com/armego/aaum-service"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "pnar-world-api"

[dependencies]
# Web framework
actix-web = "4.9"
actix-cors = "0.7"

# Async runtime
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] }
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres", 
    "chrono", 
    "uuid", 
    "json",
    "migrate"
] }

# UUID support
uuid = { version = "1.10", features = ["v4", "serde"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-actix-web = "0.7"
tracing-bunyan-formatter = "0.3"

# Security
argon2 = "0.5"
jsonwebtoken = "9.0"
rand_core = { version = "0.6", features = ["std"] }
secrecy = { version = "0.8", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Validation
validator = { version = "0.18", features = ["derive"] }

# OpenAPI / Swagger
utoipa = { version = "4.2", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "6.0", features = ["actix-web"] }