[package]
name = "pnar-world-api"
version = "1.0.0"
edition = "2021"
authors = ["Stavros Grigoriou <unix121@protonmail.com>"]
description = "Pnar World Dictionary API - A modern web service for Pnar language translation"
license = "MIT"
repository = "https://github.com/armego/pnar-world-backend-rust"
keywords = ["api", "dictionary", "translation", "pnar", "language"]
categories = ["web-programming", "internationalization"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "pnar-world-api"

[dependencies]
# Web framework
actix-web = "4.9"
actix-cors = "0.7"

# Async runtime
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] }
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres", 
    "chrono", 
    "uuid", 
    "json",
    "migrate"
] }

# UUID support
uuid = { version = "1.10", features = ["v4", "serde"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-actix-web = "0.7"
tracing-bunyan-formatter = "0.3"

# Security
argon2 = "0.5"
jsonwebtoken = "9.0"
rand_core = { version = "0.6", features = ["std"] }
secrecy = { version = "0.8", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Validation
validator = { version = "0.18", features = ["derive"] }

# OpenAPI / Swagger - Removed for simpler alternatives

# System monitoring
num_cpus = "1.16"

# Production optimizations
[profile.release]
opt-level = 3           # Maximum optimization
lto = true             # Link-time optimization
codegen-units = 1      # Better optimization
panic = "abort"        # Smaller binary, better performance
debug = false          # Remove debug info
overflow-checks = true # Safety in release mode
strip = true           # Remove symbols for smaller binary

# Development profile optimizations  
[profile.dev]
opt-level = 0          # Fast compilation
debug = true           # Include debug info
overflow-checks = true # Safety in development
incremental = true     # Enable incremental compilation
codegen-units = 16     # More codegen units for faster compilation

# Test profile
[profile.test]
opt-level = 1          # Some optimization for faster tests
debug = true           # Keep debug info for tests